Fix for Bug 4250, cart missing print button
- Print button was hidden by CSS for some reason (git blame me)
- Print formatting was off because of column mismatch
- Table style modified in print view for clarity
- Redirect from print view corrected by adding missing bib_list
  and verbose parameters

--- a/koha-tmpl/opac-tmpl/prog/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/opac.css
@@ -459,7 +459,6 @@ a .term {
 
 #toolbar a.print {
 	background: transparent url(../../images/print-small.png) 5px 50% no-repeat;
-	display : none;
 	text-decoration : none;
 	padding-left : 23px;
 }
